--- a/oculus-quest/index.html
+++ b/oculus-quest/index.html
@@ -1227,7 +1227,7 @@ USB but it is also listening for <code class="language-text">tcpip</code> connec
 <a href="#fnref-package" class="footnote-backref">↩</a>
 </li>
 </ol>
-</div></div><ul class="sc-htpNat dGwHBP"><li><a rel="prev" href="/gatsby-with-typescript/">← <!-- -->Building a Static Gatsby-based Website with TypeScript</a></li><li><a rel="next" href="/virtual-anaglyphs/"> →</a></li></ul></div></article></main><footer class="footer sc-bwzfXH aCPwf">© <!-- -->2019<!-- -->,<!-- --> <a href="https://jeffrafter.com">jeffrafter.com</a>. Built with<!-- --> <a href="https://www.gatsbyjs.org">Gatsby</a></footer></div></div><script>
+</div></div><ul class="sc-htpNat dGwHBP"><li><a rel="prev" href="/gatsby-with-typescript/">← <!-- -->Building a Static Gatsby-based Website with TypeScript</a></li></ul></div></article></main><footer class="footer sc-bwzfXH aCPwf">© <!-- -->2019<!-- -->,<!-- --> <a href="https://jeffrafter.com">jeffrafter.com</a>. Built with<!-- --> <a href="https://www.gatsbyjs.org">Gatsby</a></footer></div></div><script>
   
   
   if(true) {
