--- a/oculus-quest/index.html
+++ b/oculus-quest/index.html
@@ -157,7 +157,7 @@ when you choose <code class="language-text">Build and Run</code> it will actuall
 <li>Remove <code class="language-text">Vulkan</code> from the Graphics APIs list (Other Settings)</li>
 <li>Set the Package Name (Other Settings)<label for="sd-if-you-leave-this-at" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sd-if-you-leave-this-at" class="margin-toggle" /><span class="sidenote">If you leave this at the default of <code>com.oculus.*</code>, nothing will happen when it attempts to deploy the player. Unity will appear to complete but your Quest will do nothing (not even install the application to Unknown Sources). Change the package name to <code>com.DefaultCompany.OculusQuestTest1</code> or a name matching what you have named your Company and Product Name.</span></li>
 <li>Set the Minimum API Level to Android 4.4 ‘KitKat’ (Other Settings)</li>
-<li>Check VR Intergation (XR Settings)</li>
+<li>Check VR Integration (XR Settings)</li>
 <li>Add the Oculus Virtual Reality SDK (XR Settings)</li>
 </ul>
 </li>
